# TinyTemplate

./: .travis.yml  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: benchmarks.rs
ci/: install.sh  script.sh
fuzz/: Cargo.toml
fuzz/fuzz_targets/: render_template.rs
src/: compiler.rs  error.rs  instruction.rs  lib.rs  syntax.rs  template.rs  value.rs
