[package]
name = "tinytemplate"
version = "1.0.0"
authors = ["Brook Heisler <brookheisler@gmail.com>"]
edition = "2015"

description = "Simple, lightweight template engine"
repository = "https://github.com/bheisler/TinyTemplate"
readme = "README.md"
license = "Apache-2.0 OR MIT"
keywords = ["template", "html"]
categories = ["template-engine"]

[badges]
maintenance = { status = "passively-maintained" }

[dependencies]
serde = "1.0"
serde_json = "1.0"

[dev-dependencies]
serde_derive = "1.0"
criterion = "0.2"

[[bench]]
name = "benchmarks"
harness = false